--- a/flightsim.html
+++ b/flightsim.html
@@ -8,13 +8,15 @@
         <script src="common/webgl-utils.js"></script>
         <script src="common/MV.js"></script>
         <script src="common/init-shaders.js"></script>
+        <script src="terrain-generation.js"></script>
+        <script src="tools.js"></script>
 
         <!-- Load the code for this example -->
         <script src="flightsim.js"></script>
 
         <style>body { padding: 0; margin: 0; overflow: hidden; }</style>
     </head>
-    <body>
+    <body bgcolor="sky blue">
         <!-- Define the canvas to use for the WebGL example -->
         <canvas id="gl-canvas">
             Your browser doesn't support HTML5 canvas element
